tests/test2/fail/fail-matrixBinop3.m2
int main(){
	float a;
	a = 2.2;
	matrix int [3][2] m;
  	m = [[2,9];
        [0,2];
        [1,1]];
    
    a/m;

    return 0;
}